unpackaged/main/default/objects/Retool_Org__c/Retool_Org__c.object-meta.xml
<CustomObject>
    <label>Retool Org</label>
    <nameField>
        <label>Retool Org Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Retool Orgs</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>