unpackaged/main/default/objects/Retool_Org__c/fields/Active_User_Email_Domains__c.field-meta.xml
<CustomField>
    <fullName>Active_User_Email_Domains__c</fullName>
    <label>Active User Email Domains</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>