unpackaged/main/default/objects/Retool_Org__c/fields/Creator_Email__c.field-meta.xml
<CustomField>
    <fullName>Creator_Email__c</fullName>
    <label>Creator Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>