unpackaged/main/default/objects/Retool_Org__c/fields/Creator_Email_Clean__c.field-meta.xml
<CustomField>
    <fullName>Creator_Email_Clean__c</fullName>
    <label>Creator Email: Clean</label>
    <type>Email</type>
</CustomField>