unpackaged/main/default/objects/Retool_Org__c/fields/Creator_Email_Domain_Clean__c.field-meta.xml
<CustomField>
    <fullName>Creator_Email_Domain_Clean__c</fullName>
    <label>Creator Email Domain Clean</label>
    <length>255</length>
    <type>Text</type>
</CustomField>