unpackaged/main/default/objects/Retool_Org__c/fields/Creator_Email_Domain_Map__c.field-meta.xml
<CustomField>
    <fullName>Creator_Email_Domain_Map__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Related Domain map derived from the `Creator Email Domain Clean` field.</description>
    <inlineHelpText>Related Account found by matching the `Creator Email Domain Clean` value against existing `Domain Map` records and returning the `Matched Account` record ID.</inlineHelpText>
    <label>Creator Email Domain Map</label>
    <referenceTo>Domain_Map__c</referenceTo>
    <relationshipLabel>Retool Orgs</relationshipLabel>
    <relationshipName>Retool_Orgs</relationshipName>
    <type>Lookup</type>
</CustomField>