unpackaged/main/default/objects/Retool_Org__c/fields/Creator_Email_Domain_Map_Matched_Account__c.field-meta.xml
<CustomField>
    <fullName>Creator_Email_Domain_Map_Matched_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Related Account found by matching the `Creator Email Domain Clean` value against existing `Domain Map` records and returning the `Matched Account` record ID.</description>
    <inlineHelpText>Related Account found by matching the `Creator Email Domain Clean` value against existing `Domain Map` records and returning the `Matched Account` record ID.</inlineHelpText>
    <label>Creator Email Domain Map Matched Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Retool Orgs (Creator Email Domain Map Matched Account)</relationshipLabel>
    <relationshipName>Retool_Orgs1</relationshipName>
    <type>Lookup</type>
</CustomField>