unpackaged/main/default/objects/Retool_Org__c/fields/Creator_Email_Domain_Type__c.field-meta.xml
<CustomField>
    <fullName>Creator_Email_Domain_Type__c</fullName>
    <label>Creator Email Domain Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Domain_Types</valueSetName>
    </valueSet>
</CustomField>