unpackaged/main/default/objects/Retool_Org__c/fields/First_Account_Assigned_At__c.field-meta.xml
<CustomField>
    <fullName>First_Account_Assigned_At__c</fullName>
    <label>First Account Assigned At</label>
    <type>DateTime</type>
</CustomField>