unpackaged/main/default/objects/Retool_Org__c/fields/First_App_Saved_At__c.field-meta.xml
<CustomField>
    <fullName>First_App_Saved_At__c</fullName>
    <label>First App Saved At</label>
    <type>DateTime</type>
</CustomField>