unpackaged/main/default/objects/Retool_Org__c/fields/Has_Databricks_Resources__c.field-meta.xml
<CustomField>
    <fullName>Has_Databricks_Resources__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Databricks Resources?</label>
    <type>Checkbox</type>
</CustomField>