unpackaged/main/default/objects/Retool_Org__c/fields/Hierarchy_ID__c.field-meta.xml
<CustomField>
    <fullName>Hierarchy_ID__c</fullName>
    <formula>CASESAFEID(IF(ISBLANK(Parent_Org__c),Id,Parent_Org__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Hierarchy ID</label>
    <type>Text</type>
</CustomField>