unpackaged/main/default/objects/Retool_Org__c/fields/Hosting_Style__c.field-meta.xml
<CustomField>
    <fullName>Hosting_Style__c</fullName>
    <label>Hosting Style</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Cloud</fullName>
            </value>
            <value>
                <fullName>On Premise</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>