unpackaged/main/default/objects/Retool_Org__c/fields/Is_In_trial__c.field-meta.xml
<CustomField>
    <fullName>Is_In_trial__c</fullName>
    <defaultValue>false</defaultValue>
    <label>zOLD Is in trial?</label>
    <type>Checkbox</type>
</CustomField>