unpackaged/main/default/objects/Retool_Org__c/fields/Last_Deploy_Version__c.field-meta.xml
<CustomField>
    <fullName>Last_Deploy_Version__c</fullName>
    <label>zOLD Last Deploy Version</label>
    <length>80</length>
    <type>Text</type>
</CustomField>