unpackaged/main/default/objects/Retool_Org__c/fields/Latest_App_Version__c.field-meta.xml
<CustomField>
    <fullName>Latest_App_Version__c</fullName>
    <label>Latest App Version</label>
    <length>80</length>
    <type>Text</type>
</CustomField>