unpackaged/main/default/objects/Retool_Org__c/fields/Latest_Patch_App_Version__c.field-meta.xml
<CustomField>
    <fullName>Latest_Patch_App_Version__c</fullName>
    <label>Latest Patch App Version</label>
    <length>10</length>
    <type>Text</type>
</CustomField>