unpackaged/main/default/objects/Retool_Org__c/fields/License_First_Checked_At__c.field-meta.xml
<CustomField>
    <fullName>License_First_Checked_At__c</fullName>
    <label>License First Checked At</label>
    <type>DateTime</type>
</CustomField>