unpackaged/main/default/objects/Retool_Org__c/fields/License_Last_Checked_At__c.field-meta.xml
<CustomField>
    <fullName>License_Last_Checked_At__c</fullName>
    <label>License Last Checked At</label>
    <type>DateTime</type>
</CustomField>