unpackaged/main/default/objects/Retool_Org__c/fields/License_Status__c.field-meta.xml
<CustomField>
    <fullName>License_Status__c</fullName>
    <formula>IF(
  ISPICKVAL(Hosting_Style__c,&quot;Cloud&quot;),
  NULL,
  IF(
    ISBLANK(Retool_License__c),
    &quot;Not Licensed&quot;,
    IF(
     Retool_License__r.Is_Expired__c,
     &quot;Expired&quot;,
     IF(
       License_Last_Checked_At__c&lt;(NOW()-1),
       &quot;Lapsed&quot;,
       &quot;Active&quot;
     )
    )
  )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>License Status</label>
    <type>Text</type>
</CustomField>