unpackaged/main/default/objects/Retool_Org__c/fields/License_Type__c.field-meta.xml
<CustomField>
    <fullName>License_Type__c</fullName>
    <formula>IF(ISBLANK(Retool_License__c),&quot;Not Licensed&quot;,TEXT(Retool_License__r.Key_Type__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>License Type</label>
    <type>Text</type>
</CustomField>