unpackaged/main/default/objects/Retool_Org__c/fields/Link__c.field-meta.xml
<CustomField>
    <fullName>Link__c</fullName>
    <formula>HYPERLINK(&quot;https://retool.lightning.force.com/&quot;&amp;Id,Name,&quot;_blank&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Link</label>
    <type>Text</type>
</CustomField>