unpackaged/main/default/objects/Retool_Org__c/fields/Mobile_Activated_Signup_At__c.field-meta.xml
<CustomField>
    <fullName>Mobile_Activated_Signup_At__c</fullName>
    <label>Mobile Activated Signup At</label>
    <type>DateTime</type>
</CustomField>