unpackaged/main/default/objects/Retool_Org__c/fields/Most_Recent_Session_At__c.field-meta.xml
<CustomField>
    <fullName>Most_Recent_Session_At__c</fullName>
    <label>Most Recent Session At</label>
    <type>DateTime</type>
</CustomField>