unpackaged/main/default/objects/Retool_Org__c/fields/Needs_Account_Reparenting__c.field-meta.xml
<CustomField>
    <fullName>Needs_Account_Reparenting__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Needs Account Reparenting?</label>
    <type>Checkbox</type>
</CustomField>