unpackaged/main/default/objects/Retool_Org__c/fields/Num_Editors_Active_L30D__c.field-meta.xml
<CustomField>
    <fullName>Num_Editors_Active_L30D__c</fullName>
    <label># Editors (Active L30D)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>