unpackaged/main/default/objects/Retool_Org__c/fields/Num_Resources_Created__c.field-meta.xml
<CustomField>
    <fullName>Num_Resources_Created__c</fullName>
    <label># Resources Created</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>