unpackaged/main/default/objects/Retool_Org__c/fields/Num_Users_Total__c.field-meta.xml
<CustomField>
    <fullName>Num_Users_Total__c</fullName>
    <label># Users (Total)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>