unpackaged/main/default/objects/Retool_Org__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Retool Orgs</relationshipLabel>
    <relationshipName>Retool_Orgs</relationshipName>
    <type>Lookup</type>
</CustomField>