unpackaged/main/default/objects/Retool_Org__c/fields/Org_Hierarchy__c.field-meta.xml
<CustomField>
    <fullName>Org_Hierarchy__c</fullName>
    <description>Used to determine Primary Org on Case creation</description>
    <formula>IF( AND( ISPICKVAL( Hosting_Style__c , &quot;Cloud&quot;) ,   Is_Active_Customer__c = FALSE), 0, 
IF( AND( NOT(ISPICKVAL(Hosting_Style__c, &quot;Cloud&quot;)),  License_Status__c = &quot;Not Licensed&quot;), 0,
CASE(Plan_Name__c,
 &quot;Enterprise&quot;,900000,
 &quot;Business&quot;,500000,
 &quot;Team&quot;,200000,
 0
) ))
+
Num_Users_Active_L30D__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Org Hierarchy</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>