unpackaged/main/default/objects/Retool_Org__c/fields/Org_Priority__c.field-meta.xml
<CustomField>
    <fullName>Org_Priority__c</fullName>
    <formula>IF (
    Stripe_Annualized_Revenue__c &gt; 0,
    &#39;1 - Paid Account&#39;,
    IF (
        NOT(OR(ISBLANK(Subscription_Type__c), Subscription_Type__c = &#39;None&#39;)),
        &#39;2 - Subscription&#39;,
        IF (
            NOT(ISBLANK(Business_Unit__c)),
            &#39;3 - Business Unit&#39;,
            IF (
                DATEVALUE(CreatedDate) &gt;= (TODAY() - 90),
                &#39;4 - Recently Created&#39;,&#39;5 - Other&#39;
                )
            )
        )
    )</formula>
    <label>Org Priority</label>
    <type>Text</type>
</CustomField>