unpackaged/main/default/objects/Retool_Org__c/fields/Org_Summary__c.field-meta.xml
<CustomField>
    <fullName>Org_Summary__c</fullName>
    <formula>Name &amp; &quot; | &quot;&amp;Plan_Name__c &amp; &quot; | &quot;&amp; Usage__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Org Summary</label>
    <type>Text</type>
</CustomField>