unpackaged/main/default/objects/Retool_Org__c/fields/Parent_Org__c.field-meta.xml
<CustomField>
    <fullName>Parent_Org__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Org</label>
    <referenceTo>Retool_Org__c</referenceTo>
    <relationshipLabel>Child Orgs</relationshipLabel>
    <relationshipName>Child_Orgs</relationshipName>
    <type>Lookup</type>
</CustomField>