unpackaged/main/default/objects/Retool_Org__c/fields/Plan_Family__c.field-meta.xml
<CustomField>
    <fullName>Plan_Family__c</fullName>
    <label>Plan Family</label>
    <length>80</length>
    <type>Text</type>
</CustomField>