unpackaged/main/default/objects/Retool_Org__c/fields/Provisioned_Plan_Mismatch__c.field-meta.xml
<CustomField>
    <fullName>Provisioned_Plan_Mismatch__c</fullName>
    <formula>IF(
  NOT(ISBLANK(Self_Service_Stripe_Customer_ID__c)),
  Plan_Family__c != TEXT(Self_Service_Stripe_Plan_Name__c),
  IF(
    NOT(ISBLANK(Business_Unit__c)),
    Plan_Family__c != TEXT(Business_Unit__r.Plan_Name__c),
    FALSE
  )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Provisioned Plan Mismatch?</label>
    <type>Checkbox</type>
</CustomField>