unpackaged/main/default/objects/Retool_Org__c/fields/Retool_License__c.field-meta.xml
<CustomField>
    <fullName>Retool_License__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Retool License</label>
    <referenceTo>Retool_License__c</referenceTo>
    <relationshipLabel>Retool Orgs</relationshipLabel>
    <relationshipName>Retool_Orgs</relationshipName>
    <type>Lookup</type>
</CustomField>