unpackaged/main/default/objects/Retool_Org__c/fields/Routing_Mismatch__c.field-meta.xml
<CustomField>
    <fullName>Routing_Mismatch__c</fullName>
    <formula>IF(
  Space_Type__c = &quot;child&quot; &amp;&amp; (
    Account__c != Parent_Org__r.Account__c || Business_Unit__c != Parent_Org__r.Business_Unit__c
  ),
  TRUE,
  IF(
    NOT(ISBLANK(Retool_License__c)) &amp;&amp; (
      Account__c != Retool_License__r.Account__c || Business_Unit__c != Retool_License__r.Business_Unit__c
    ),
    TRUE,
    IF(
      NOT(ISBLANK(Opportunity__c)) &amp;&amp; (
        Account__c != Opportunity__r.AccountId || Business_Unit__c != Opportunity__r.Business_Unit__c
      ),
     TRUE,
     FALSE
    )
  )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Routing Mismatch?</label>
    <type>Checkbox</type>
</CustomField>