unpackaged/main/default/objects/Retool_Org__c/fields/Self_Service_ARR__c.field-meta.xml
<CustomField>
    <fullName>Self_Service_ARR__c</fullName>
    <label>Self Service: ARR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>