unpackaged/main/default/objects/Retool_Org__c/fields/Self_Service_First_Paid_Date__c.field-meta.xml
<CustomField>
    <fullName>Self_Service_First_Paid_Date__c</fullName>
    <label>Self Service: First Paid Date</label>
    <type>Date</type>
</CustomField>