unpackaged/main/default/objects/Retool_Org__c/fields/Self_Service_Num_End_User_Seats__c.field-meta.xml
<CustomField>
    <fullName>Self_Service_Num_End_User_Seats__c</fullName>
    <label>Self Service: # End User Seats</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>