unpackaged/main/default/objects/Retool_Org__c/fields/Self_Service_Payment_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Self_Service_Payment_Frequency__c</fullName>
    <label>Self Service: Payment Frequency</label>
    <length>80</length>
    <type>Text</type>
</CustomField>