unpackaged/main/default/objects/Retool_Org__c/fields/Self_Service_Pricing_Type__c.field-meta.xml
<CustomField>
    <fullName>Self_Service_Pricing_Type__c</fullName>
    <label>Self Service: Pricing Type</label>
    <length>20</length>
    <type>Text</type>
</CustomField>