unpackaged/main/default/objects/Retool_Org__c/fields/Self_Service_Stripe_Customer_ID__c.field-meta.xml
<CustomField>
    <fullName>Self_Service_Stripe_Customer_ID__c</fullName>
    <externalId>true</externalId>
    <label>Self Service: Stripe Customer ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>