unpackaged/main/default/objects/Retool_Org__c/fields/Self_Service_Stripe_Plan_Name__c.field-meta.xml
<CustomField>
    <fullName>Self_Service_Stripe_Plan_Name__c</fullName>
    <label>Self Service: Stripe Plan Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Plan_Names</valueSetName>
    </valueSet>
</CustomField>