unpackaged/main/default/objects/Retool_Org__c/fields/Source_Data__c.field-meta.xml
<CustomField>
    <fullName>Source_Data__c</fullName>
    <label>Source Data</label>
    <length>255</length>
    <type>Text</type>
</CustomField>