unpackaged/main/default/objects/Retool_Org__c/fields/Space_Type__c.field-meta.xml
<CustomField>
    <fullName>Space_Type__c</fullName>
    <label>Space Type</label>
    <length>80</length>
    <type>Text</type>
</CustomField>