unpackaged/main/default/objects/Retool_Org__c/fields/Stripe_Annualized_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Stripe_Annualized_Revenue__c</fullName>
    <formula>Primary_Stripe_Customer__r.Annualized_Revenue__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Stripe Annualized Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>