unpackaged/main/default/objects/Retool_Org__c/fields/Stripe_State__c.field-meta.xml
<CustomField>
    <fullName>Stripe_State__c</fullName>
    <formula>IF(ISBLANK( Primary_Stripe_Customer__c),&quot;no subscription&quot;, Primary_Stripe_Customer__r.State__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Stripe State</label>
    <type>Text</type>
</CustomField>