unpackaged/main/default/objects/Retool_Org__c/fields/Subscription_Type__c.field-meta.xml
<CustomField>
    <fullName>Subscription_Type__c</fullName>
    <formula>IF(
 ISBLANK( Primary_Stripe_Customer__c),
 &quot;None&quot;,
 IF( Primary_Stripe_Customer__r.Is_Self_Serve__c || ISPICKVAL(Retool_License__r.Key_Type__c ,&quot;SSOP&quot;),&quot;Self Service&quot;,&quot;Committed&quot;)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Subscription Type</label>
    <type>Text</type>
</CustomField>