unpackaged/main/default/objects/Retool_Org__c/fields/Usage__c.field-meta.xml
<CustomField>
    <fullName>Usage__c</fullName>
    <formula>TEXT(Num_Users_Active_L30D__c)&amp;&quot; MAU | &quot;&amp;
TEXT(Num_Apps_Used_L30D__c)&amp;&quot; apps | &quot;&amp;
TEXT(Num_Resources_Created__c)&amp;&quot; resources&quot;&amp;IF(Space_Type__c = &quot;child&quot;,&quot; [Child]&quot;,NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Usage</label>
    <type>Text</type>
</CustomField>