unpackaged/main/default/objects/Retool_Org__c/fields/Web_Activated_Signup_At__c.field-meta.xml
<CustomField>
    <fullName>Web_Activated_Signup_At__c</fullName>
    <label>Web Activated Signup At</label>
    <type>DateTime</type>
</CustomField>