unpackaged/main/default/objects/Retool_Org__c/validationRules/Account_required.validationRule-meta.xml
<ValidationRule>
    <fullName>Account_required</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK(Account__c)</errorConditionFormula>
    <errorMessage>Account is required</errorMessage>
</ValidationRule>