unpackaged/main/default/objects/Retool_Org__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>CREATED_DATE</columns>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Is_Active_Customer__c</columns>
    <columns>Stripe_State__c</columns>
    <columns>License_Status__c</columns>
    <columns>Plan_Name__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>